# subtitles

./: .editorconfig  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
audio/: .gitignore  README.md  concurrency_test.py  main.py  pyproject.toml  test.py
